--- a/css/kasper.css
+++ b/css/kasper.css
@@ -38,7 +38,7 @@ body {
     height: 1px;
     position: absolute;
     bottom: 20px;
-    background-color: var(--main-color: #19c8fa);
+    background-color: #34caca;
     left: 50%;
     transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
